Minor design changes to each page.

--- a/progLanguagesPage.html
+++ b/progLanguagesPage.html
@@ -59,17 +59,13 @@
             } // end function
         } // end for 
     </script>
-    <br>
-    <h2>
-        <center>Programming Languages: </center>
-    </h2>
 
     <br>
     <div class="container">
         <div class="infoCard">
             <div class="container text-center">
                 <h3 id="frontEnd">
-                    <center> Front End Languages: </center>
+                    <center> Programming Languages: </center>
                 </h3>
                 <div class="row">
                     <div class="col">
@@ -94,11 +90,6 @@
                         </div>
                     </div>
                 </div>
-
-                <br>
-                <h3 id="frontEnd">
-                    <center> Object Oriented Languages: </center>
-                </h3>
                 <div class="row">
                     <div class="col">
                         <div class="progLangCube">
@@ -122,20 +113,7 @@
                         </div>
                     </div>
                 </div>
-
-                <br>
-                <h3 id="frontEnd">
-                    <center> Other Languages: </center>
-                </h3>
-
                 <div class="row">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> MATLAB </h6>
-                            <img class="progLangIcon" src="Images/matlab.png" title="MATLAB" width="75px" height="75px"
-                                alt="MATLAB Logo">
-                        </div>
-                    </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> SQL </h6>
@@ -147,11 +125,8 @@
             </div>
         </div>
     </div>
-
     <br>
-    <h2>
-        <center>Software & Technologies: </center>
-    </h2>
+
 
     <div class="container">
         <div class="infoCard">
@@ -159,57 +134,83 @@
                 <h3 id="frontEnd">
                     <center> Software: </center>
                 </h3>
-                <br>
                 <div class="row">
                     <div class="col">
                         <div class="progLangCube">
-                            <h6 class="softwareName"> ____ </h6>
+                            <h6 class="softwareName"> Visual Studio Code </h6>
+                            <img class="progLangIcon" src="Images/vsCode.png" title="HTML" width="50px" height="50px"
+                                alt="HTML Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> Android Studio </h6>
+                            <img class="progLangIcon" src="Images/androidStudio.png" title="Android Studio" width="75px"
+                                height="75px" alt="Android Studio Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> Visual Studio </h6>
+                            <img class="progLangIcon" src="Images/visualStudio.png" title="Visual Studio" width="75px"
+                                height="75px" alt="Visual Studio Logo">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> VirtualBox </h6>
+                            <img class="progLangIcon" src="Images/virtualBox.png" title="VirtualBox" width="77px"
+                                height="60px" alt="VirtualBox Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> Raspberry Pi </h6>
+                            <img class="progLangIcon" src="Images/raspberryPi.png" title="Raspberry Pi" width="65px"
+                                height="65px" alt="Raspberry Pi Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> MATLAB </h6>
+                            <img class="progLangIcon" src="Images/matlab.png" title="HTML" width="75px" height="75px"
+                                alt="MATLAB Logo">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="techName"> GitHub </h6>
                             <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
-                            <h6 class="softwareName"> ____ </h6>
+                            <h6 class="techName"> Jupyter Notebooks </h6>
                             <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
-                            <h6 class="softwareName"> ____ </h6>
+                            <h6 class="techName"> Flutter </h6>
                             <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
                         </div>
                     </div>
                 </div>
-                <br>
-                <h3 id="frontEnd">
-                    <center> Technologies: </center>
-                </h3>
                 <div class="row">
                     <div class="col">
                         <div class="progLangCube">
-                            <h6 class="techName"> ____ </h6>
+                            <h6 class="techName"> Django </h6>
                             <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> ____ </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> ____ </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
