--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     a Puerto Rican Computer Engineering Student">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    
+
     <script type="text/javascript">
         (function () {
             emailjs.init('ELMXtOZt_-M3UQsLY');
@@ -44,7 +44,7 @@
                         onclick="window.location.href='progLanguagesPage.html';"> <img
                             src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
-                <li class="options"><button class="menuButtons"" type=" button" 
+                <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
@@ -72,6 +72,7 @@
         <center>
             <h2 class="greeting"> Hello, </h2>
             <h1 class="greeting"> my name is Jadnell H. Reyes Pérez </h1>
+            <h4 class="greeting"> Computer Engineering Graduate </h4>
         </center>
     </div>
 
