Changed .png images and icons to .svg

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     <div class="navBar">
         <div class="menu">
             <div id="selectMenu">
-                <button id="menuButton" type="button"> <img src="Images/hamburgerMenu.png" title="Menu" width="50px"
-                        height="50px" alt="Menu Button"> </button>
+                <button id="menuButton" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
+                        width="50px" height="50px" alt="Menu Button"> </button>
             </div>
 
             <ul id="menuButtonsList" class="hide">
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
-                            width="50px" height="50px" alt="About Me Button"> </li>
+                        onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
+                            title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='progLanguagesPage.html';"> <img
-                            src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
+                            src="Images/Icons/programmingLanguages.svg" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
+                        onclick="window.location.href='projectsPage.html';"> <img src="Images/Icons/layers.svg"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
         </div>
@@ -84,12 +84,11 @@
             <div class="col">
                 <div class="container">
                     <center>
-                        <a><img class="mainPictures" src="Images/TRENZAS ME.jpg" title="Hello! This is me" width="250px"
-                                height="250px" alt="I was supposed to appear here..."></a>
+                        <a><img class="mainPictures" src="Images/Pictures/TRENZAS ME.jpg" title="Hello! This is me"
+                                width="250px" height="250px" alt="I was supposed to appear here..."></a>
                         <br>
-                        <a><img class="mainPictures" src="Images/BEACH.jpg" title="This is Puerto Rico" width="250px"
-                                height="250px" alt="Picture of a Beach in Puerto Rico"></a>
-
+                        <a><img class="mainPictures" src="Images/Pictures/BEACH.jpg" title="This is Puerto Rico"
+                                width="250px" height="250px" alt="Picture of a Beach in Puerto Rico"></a>
                     </center>
 
                 </div>
@@ -170,8 +169,8 @@
                         <div class="col">
                             <div class="container">
                                 <a type="button" href="https://www.instagram.com/j_dnll/"><img
-                                        src="Images/instagram.png" title="Instagram" width="40px" height="40px"
-                                        alt="Instagram Button">
+                                        src="Images/Social Media/instagram.svg" title="Instagram" width="40px"
+                                        height="40px" alt="Instagram Button">
                                 </a>
                                 <h6> Instagram </h6>
                             </div>
@@ -179,7 +178,7 @@
                         <div class="col">
                             <div class="container">
                                 <a type="button" href="https://www.twitter.com/jadnellReyes"><img
-                                        src="Images/twitter.png" title="Twitter" width="40px" height="40px"
+                                        src="Images/Social Media/twitter.svg" title="Twitter" width="40px" height="40px"
                                         alt="Twitter Button">
                                 </a>
                                 <h6> Twitter </h6>
@@ -188,8 +187,9 @@
 
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                                        title="GitHub" width="40px" height="40px" alt="GitHub Button">
+                                <a type="button" href="https://github.com/jadnell555"><img
+                                        src="Images/Tech Stack/github.svg" title="GitHub" width="40px" height="40px"
+                                        alt="GitHub Button">
                                 </a>
                                 <h6> GitHub </h6>
                             </div>
