--- a/progLanguagesPage.html
+++ b/progLanguagesPage.html
@@ -25,20 +25,20 @@
     <div class="navBar">
         <div class="menu">
             <div id="selectMenu">
-                <button id="menuButton" type="button"> <img src="Images/hamburgerMenu.png" title="Menu" width="50px"
-                        height="50px" alt="Menu Button"> </button>
+                <button id="menuButton" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
+                        width="50px" height="50px" alt="Menu Button"> </button>
             </div>
 
             <ul id="menuButtonsList" class="hide">
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
-                            width="50px" height="50px" alt="About Me Button"> </li>
+                        onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
+                            title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='progLanguagesPage.html';"> <img
-                            src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
+                            src="Images/Icons/programmingLanguages.svg" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
+                        onclick="window.location.href='projectsPage.html';"> <img src="Images/Icons/layers.svg"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
         </div>
@@ -71,22 +71,22 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> HTML </h6>
-                            <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px" height="75px"
-                                alt="HTML Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/html.svg" title="HTML" width="75px"
+                                height="75px" alt="HTML Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> CSS </h6>
-                            <img class="progLangIcon" src="Images/css.png" title="CSS" width="75px" height="75px"
-                                alt="CSS Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/css.svg" title="CSS" width="75px"
+                                height="75px" alt="CSS Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> JavaScript </h6>
-                            <img class="progLangIcon" src="Images/javaScript.png" title="JavaScript" width="70px"
-                                height="70px" alt="JavaScript Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/javascript.svg" title="JavaScript"
+                                width="70px" height="70px" alt="JavaScript Logo">
                         </div>
                     </div>
                 </div>
@@ -94,22 +94,22 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> Python </h6>
-                            <img class="progLangIcon" src="Images/python.png" title="Python" width="75px" height="75px"
-                                alt="Python Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/python.svg" title="Python" width="75px"
+                                height="75px" alt="Python Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> C++ </h6>
-                            <img class="progLangIcon" src="Images/c++.png" title="C++" width="75px" height="75px"
-                                alt="C++ Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/c++.svg" title="C++" width="75px"
+                                height="75px" alt="C++ Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> Dart </h6>
-                            <img class="progLangIcon" src="Images/dart.png" title="Dart" width="75px" height="75px"
-                                alt="Dart Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/dart.svg" title="Dart" width="75px"
+                                height="75px" alt="Dart Logo">
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> SQL </h6>
-                            <img class="progLangIcon" src="Images/sql.png" title="SQL" width="75px" height="75px"
-                                alt="SQL Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/sql.svg" title="SQL" width="75px"
+                                height="75px" alt="SQL Logo">
                         </div>
                     </div>
                 </div>
@@ -138,22 +138,22 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> Visual Studio Code </h6>
-                            <img class="progLangIcon" src="Images/vsCode.png" title="HTML" width="50px" height="50px"
-                                alt="HTML Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/visualStudioCode.svg"
+                                title="Visual Studio Code" width="50px" height="50px" alt="Visual Studio Code Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> Android Studio </h6>
-                            <img class="progLangIcon" src="Images/androidStudio.png" title="Android Studio" width="75px"
-                                height="75px" alt="Android Studio Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/androidStudio.svg" title="Android Studio"
+                                width="75px" height="75px" alt="Android Studio Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> Visual Studio </h6>
-                            <img class="progLangIcon" src="Images/visualStudio.png" title="Visual Studio" width="75px"
-                                height="75px" alt="Visual Studio Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/visualStudio.svg" title="Visual Studio"
+                                width="75px" height="75px" alt="Visual Studio Logo">
                         </div>
                     </div>
                 </div>
@@ -161,22 +161,22 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> VirtualBox </h6>
-                            <img class="progLangIcon" src="Images/virtualBox.png" title="VirtualBox" width="77px"
-                                height="60px" alt="VirtualBox Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/virtualbox.svg" title="VirtualBox"
+                                width="77px" height="60px" alt="VirtualBox Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> Raspberry Pi </h6>
-                            <img class="progLangIcon" src="Images/raspberryPi.png" title="Raspberry Pi" width="65px"
-                                height="65px" alt="Raspberry Pi Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/raspberryPi.svg" title="Raspberry Pi"
+                                width="65px" height="65px" alt="Raspberry Pi Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> MATLAB </h6>
-                            <img class="progLangIcon" src="Images/matlab.png" title="HTML" width="75px" height="75px"
-                                alt="MATLAB Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/matlab.svg" title="MATLAB" width="75px"
+                                height="75px" alt="MATLAB Logo">
                         </div>
                     </div>
                 </div>
@@ -184,22 +184,22 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> GitHub </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
+                            <img class="progLangIcon" src="Images/Tech Stack/github.svg" title="GitHub" width="75px"
+                                height="75px" alt="GitHub Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Jupyter Notebooks </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
+                            <img class="progLangIcon" src="Images/Tech Stack/Jupyter.svg" title="Jupyter Notebooks"
+                                width="75px" height="75px" alt="Jupyter Logo">
                         </div>
                     </div>
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Flutter </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
+                            <img class="progLangIcon" src="Images/Tech Stack/flutter.svg" title="Flutter" width="75px"
+                                height="75px" alt="Flutter Logo">
                         </div>
                     </div>
                 </div>
@@ -207,13 +207,13 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Django </h6>
-                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
+                            <img class="progLangIcon" src="Images/Tech Stack/django.svg" title="Django" width="75px"
+                                height="75px" alt="Django Logo">
                         </div>
                     </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
 
@@ -232,8 +232,8 @@
                         <div class="col">
                             <div class="container">
                                 <a type="button" href="https://www.instagram.com/j_dnll/"><img
-                                        src="Images/instagram.png" title="Instagram" width="40px" height="40px"
-                                        alt="Instagram Button">
+                                        src="Images/Social Media/instagram.svg" title="Instagram" width="40px"
+                                        height="40px" alt="Instagram Button">
                                 </a>
                                 <h6> Instagram </h6>
                             </div>
@@ -241,7 +241,7 @@
                         <div class="col">
                             <div class="container">
                                 <a type="button" href="https://www.twitter.com/jadnellReyes"><img
-                                        src="Images/twitter.png" title="Twitter" width="40px" height="40px"
+                                        src="Images/Social Media/twitter.svg" title="Twitter" width="40px" height="40px"
                                         alt="Twitter Button">
                                 </a>
                                 <h6> Twitter </h6>
@@ -250,8 +250,9 @@
 
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                                        title="GitHub" width="40px" height="40px" alt="GitHub Button">
+                                <a type="button" href="https://github.com/jadnell555"><img
+                                        src="Images/Tech Stack/github.svg" title="GitHub" width="40px" height="40px"
+                                        alt="GitHub Button">
                                 </a>
                                 <h6> GitHub </h6>
                             </div>
