Changed href in menu buttons to new techStackPage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
                             title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='progLanguagesPage.html';"> <img
+                        onclick="window.location.href='techStackPage.html';"> <img
                             src="Images/Icons/programmingLanguages.svg" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
                 <li class="options"><button class="menuButtons"" type=" button"
