--- a/techStackPage.html
+++ b/techStackPage.html
@@ -34,7 +34,7 @@
                         onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
                             title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
                 <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='progLanguagesPage.html';"> <img
+                        onclick="window.location.href='techStackPage.html';"> <img
                             src="Images/Icons/programmingLanguages.svg" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
                 <li class="options"><button class="menuButtons"" type=" button"
@@ -207,8 +207,8 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Django </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/django.svg" title="Django" width="75px"
-                                height="75px" alt="Django Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/django.svg" title="Django" width="50px"
+                                height="50px" alt="Django Logo">
                         </div>
                     </div>
                 </div>
