Fixed some pictures positon and sizing

--- a/techStackPage.html
+++ b/techStackPage.html
@@ -85,8 +85,9 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> JavaScript </h6>
+                            <div class="space3px"></div>
                             <img class="progLangIcon" src="Images/Tech Stack/javascript.svg" title="JavaScript"
-                                width="75px" height="75px" alt="JavaScript Logo">
+                                width="65px" height="65px" alt="JavaScript Logo">
                         </div>
                     </div>
                 </div>
@@ -108,8 +109,9 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> Dart </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/dart.svg" title="Dart" width="75px"
-                                height="75px" alt="Dart Logo">
+                            <div class="space5px"></div>
+                            <img class="progLangIcon" src="Images/Tech Stack/dart.svg" title="Dart" width="80px"
+                                height="40px" alt="Dart Logo">
                         </div>
                     </div>
                 </div>
@@ -117,8 +119,8 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> SQL </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/sql.svg" title="SQL" width="75px"
-                                height="75px" alt="SQL Logo">
+                            <img class="progLangIcon" src="Images/Tech Stack/sql.svg" title="SQL" width="70px"
+                                height="70px" alt="SQL Logo">
                         </div>
                     </div>
                 </div>
@@ -198,8 +200,9 @@
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Flutter </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/flutter.svg" title="Flutter" width="75px"
-                                height="75px" alt="Flutter Logo">
+                            <div class="space3px"></div>
+                            <img class="progLangIcon" src="Images/Tech Stack/flutter.svg" title="Flutter" width="55px"
+                                height="55px" alt="Flutter Logo">
                         </div>
                     </div>
                 </div>
