--- a/techStackPage.html
+++ b/techStackPage.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet">
+    <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta name="description" content="This webpage contains information about Jadnell Reyes, 
