--- a/projectsPage.html
+++ b/projectsPage.html
@@ -30,16 +30,22 @@
             </div>
 
             <ul id="menuButtonsList" class="hide">
+
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
                             title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
+                <h6 class="menuButtonsTitle">About Me</h6>
+
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='techStackPage.html';"> <img
-                            src="Images/Icons/programmingLanguages.svg" title="Programming Languages" width="50px"
-                            height="50px" alt="Programming Languages Button"></li>
+                            src="Images/Icons/programmingLanguages.svg" title="Tech Stack" width="50px"
+                            height="50px" alt="Tech Stack Button"> </li>
+                <h6 class="menuButtonsTitle">Tech Stack</h6>
+
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/Icons/layers.svg"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
+                <h6 class="menuButtonsTitle">Projects</h6>
             </ul>
         </div>
     </div>
