Added hover effect to menu buttons

--- a/techStackPage.html
+++ b/techStackPage.html
@@ -25,7 +25,7 @@
     <div class="navBar">
         <div class="menu">
             <div id="selectMenu">
-                <button id="menuButton" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
+                <button class="menuButtons" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
                         width="50px" height="50px" alt="Menu Button"> </button>
             </div>
 
