--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="navBar">
         <div class="menu">
             <div id="selectMenu">
-                <button id="menuButton" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
+                <button class="menuButtons" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
                         width="50px" height="50px" alt="Menu Button"> </button>
             </div>
 
@@ -46,8 +46,8 @@
 
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='techStackPage.html';"> <img
-                            src="Images/Icons/programmingLanguages.svg" title="Tech Stack" width="50px"
-                            height="50px" alt="Tech Stack Button"></li>
+                            src="Images/Icons/programmingLanguages.svg" title="Tech Stack" width="50px" height="50px"
+                            alt="Tech Stack Button"></li>
                 <h6 class="menuButtonsTitle">Tech Stack</h6>
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/Icons/layers.svg"
