Added animations to Menu Buttons

--- a/techStackPage.html
+++ b/techStackPage.html
@@ -24,8 +24,8 @@
     <!-- One Button Navigation Bar-->
     <div class="navBar">
         <div class="menu">
-            <div id="selectMenu">
-                <button class="menuButtons" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
+            <div id="selectMenu" class="show">
+                <button id="menuButton" class="menuButtons" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
                         width="50px" height="50px" alt="Menu Button"> </button>
             </div>
 
@@ -66,7 +66,7 @@
     </script>
 
     <br>
-    <div class="container">
+    <div class="techStackContainer">
         <div class="infoCard">
             <div class="container text-center">
                 <h3 id="frontEnd">
@@ -135,7 +135,7 @@
     <br>
 
 
-    <div class="container">
+    <div class="techStackContainer">
         <div class="infoCard">
             <div class="container text-center">
                 <h3 id="frontEnd">
