Social Media buttons redone using the same design

--- a/index.html
+++ b/index.html
@@ -174,30 +174,33 @@
                     <div class="row">
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://www.instagram.com/j_dnll/"><img
-                                        src="Images/Social Media/instagram.svg" title="Instagram" width="40px"
-                                        height="40px" alt="Instagram Button">
-                                </a>
-                                <h6> Instagram </h6>
+                                <button class="socialMediaButton" type="button"
+                                    onclick="window.location.href='https://www.instagram.com/j_dnll/';"><img
+                                        src="Images/Social Media/instagram.svg" title="Instagram" width="30px"
+                                        height="30px" alt="Instagram Button">
+                                </button>
+                                <h6 class="socialMediaTitles"> Instagram </h6>
                             </div>
                         </div>
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://www.twitter.com/jadnellReyes"><img
-                                        src="Images/Social Media/twitter.svg" title="Twitter" width="40px" height="40px"
+                                <button class="socialMediaButton" type="button"
+                                    onclick="window.location.href='https://www.twitter.com/jadnellReyes';"><img
+                                        src="Images/Social Media/twitter.svg" title="Twitter" width="30px" height="30px"
                                         alt="Twitter Button">
-                                </a>
-                                <h6> Twitter </h6>
+                                </button>
+                                <h6 class="socialMediaTitles"> Twitter </h6>
                             </div>
                         </div>
 
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://github.com/jadnell555"><img
-                                        src="Images/Tech Stack/github.svg" title="GitHub" width="40px" height="40px"
+                                <button class="socialMediaButton" type="button"
+                                    onclick="window.location.href='https://github.com/jadnell555';"><img
+                                        src="Images/Tech Stack/github.svg" title="GitHub" width="30px" height="30px"
                                         alt="GitHub Button">
-                                </a>
-                                <h6> GitHub </h6>
+                                </button>
+                                <h6 class="socialMediaTitles"> GitHub </h6>
                             </div>
                         </div>
                     </div>
