General Bug Fixes

--- a/projectsPage.html
+++ b/projectsPage.html
@@ -83,7 +83,7 @@
                         <br>
 
                         <h3 class="projectHeadings"> Programming Language Used: </h3>
-                        <button class="projectButton" type="button"><img class="projectLang"
+                        <button class="projectButton" type="button"><img
                                 src="Images/Tech Stack/python.svg" title="Python" width="100px" height="100px"
                                 alt="Python Logo"></button>
 
