--- a/techStackPage.html
+++ b/techStackPage.html
@@ -72,7 +72,7 @@
                 <h3 id="frontEnd">
                     <center> Programming Languages: </center>
                 </h3>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> HTML </h6>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> Python </h6>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="progLangName"> SQL </h6>
@@ -141,7 +141,7 @@
                 <h3 id="frontEnd">
                     <center> Software: </center>
                 </h3>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> Visual Studio Code </h6>
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="softwareName"> VirtualBox </h6>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> GitHub </h6>
@@ -211,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row row-cols-3">
                     <div class="col">
                         <div class="progLangCube">
                             <h6 class="techName"> Django </h6>
